# bot

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.sqlx/: query-0172ce7a7806501cc27611f99fd908ac058fa623d39e639913b3fdc728401f1e.json  query-8de268607a2fefda02bb072bcf8714c45da85116b0f80416238b43ff85811162.json  query-cb1377ce83412f17286ac6a813f2436768142e054f8ef6c4e98241e1e4d5fbbf.json  query-d5e73169cc6a97b83f18dd725b120c0225baca0375e3c049926e33b63f137fb3.json
app/: Cargo.toml
app/src/: error.rs  events.rs  main.rs  metrics.rs  settings.rs
app/src/commands/: levels.rs  lorax.rs  mod.rs  modrinth.rs  network.rs  query.rs  user.rs
app/src/tasks/: lorax_scheduler.rs  mod.rs  server_deletion.rs  stats_updater.rs
migrations/: 1_guilds.sql  2_users.sql
