[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros", "migrate" ] }
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json"] }
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"
serde_json = "1.0.132"
dotenvy = "0.15.7"
crossbeam-channel = "0.5.13"
parking_lot = "0.12.3"
thiserror = "2.0.3"
async-trait = "0.1"
rand = "0.8.5"
